[package]
name = "techmino-replay-toolkit"
version = "0.1.0"
edition = "2021"
description = "A serializer and deserializer for Techmino replays"
repository = "https://github.com/techmino-hub/techmino-replay-toolkit-rs"
license = "GPL-3.0-or-later"

[dependencies]
base64 = "0.22.1"
miniz_oxide = "0.8.0"
semver = "1.0.25"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
